# OpenGL_Renderer

./: CMakeLists.txt  errorcheck.cpp  main.cpp
application/: Application.cpp  Application.h  CMakeLists.txt
wrapper/: CMakeLists.txt  checkError.cpp  checkError.h
